fix style petit ecran info logement + style collapse text

--- a/src/styles/Collapse.scss
+++ b/src/styles/Collapse.scss
@@ -39,6 +39,7 @@
     .collapse-texte {
         font-size: 18px;
         padding-left: 15px;
+        padding-right: 15px;
         margin: 0;
         text-justify: auto;
         background-color: #f6f6f6;
