--- a/src/styles/InfoLogement.scss
+++ b/src/styles/InfoLogement.scss
@@ -31,6 +31,7 @@
         .tags {
             display: flex;
             gap: 10px;
+            max-width: 90vw;
 
             div {
                 background-color: #ff6060;
@@ -92,6 +93,13 @@
 @media (max-width: 767.98px) {
     .info-logement {
         flex-direction: column;
+        gap: 5px;
+
+        .logement-container-left {
+            .tags {
+                width: auto;
+            }
+        }
 
         .logement-container-right {
             flex-direction: row-reverse;
